<resources>
    <string name="app_name">YourChad</string>
    <string name="copyright">©ASL 2021</string>
    <string name="your_chad">Your Chad</string>
    <string name="wh_chad">Welcome Home,\nChad</string>
    <!--                Event Buttons               -->
    <string name="sing_in">Sing in</string>
    <string name="sing_up">Register</string>
    <string name="recovery">Recovery</string>

    <string name="to_sign_in"><u>sing in</u></string>
    <string name="to_sign_in2"><u>Already registered?</u></string>
    <string name="to_recovery"><u>Forgot password?</u></string>
    <string name="to_register"><u>Do not have account?</u></string>
    <string name="login">Username or Email</string>
    <string name="email">Email</string>
    <string name="mail_help">Enter your Email address</string>
    <string name="username">Username</string>
    <string name="username_help">Enter username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="UnderLine"><u>    </u></string>
    <string name="Dot"><u> • </u></string>
<!--                numeric                     -->
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="enter_pin">Enter Pin Chad</string>
</resources>